app/static/scss/_template.scss
$font-stack: 'Open Sans', sans-serif;
$primary-color: #41cac0;
$body-back-color: #333;


body {
  font: 100% $font-stack;
  background-color: $body-back-color
}


.alert.alert-info.message {
    margin-top: 20px;
    text-align-center;
    font-size: 14px;
}



.form {

    margin-top: 100px;
    background: #fff;
    border-radius: 5px;
    -webkit-border-radius: 5px;

    h2.form-heading {
        margin: 0;
        padding:20px 15px;
        text-align: center;
        background: $primary-color;
        border-radius: 5px 5px 0 0;
        -webkit-border-radius: 5px 5px 0 0;
        color: #fff;
        font-size: 18px;
        text-transform: uppercase;
        font-weight: 300;
        font-family: $font-stack;
    }

    .form-control {
        position: relative;
        font-size: 16px;
        height: auto;
        padding: 10px;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
    }

    .form-control:focus {
        z-index: 2;
    }

    input {
        margin-bottom: 15px;
        border-radius: 5px;
        -webkit-border-radius: 5px;
        border: 1px solid #eaeaea;
        box-shadow: none;
        font-size: 12px;
    }

    p {
        text-align: center;
        color: #b6b6b6;
        font-size: 16px;
        font-weight: 300;
    }

    a {
        color: $primary-color;
    }

    a:hover {
        color: #b6b6b6;
    }

    .input-wrap {
        padding: 20px;
    }
}

